# killingFusionCuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  references.md
data/: intrinsics_kinect1.txt  plotsurface.m
matlab/: WriteVideo.m  makeMask.m
src/: color.h  convolution.cu  convolution.cuh  dataset.cpp  dataset.h  divergence.cu  divergence.cuh  energy.cu  energy.cuh  energyDerivatives.cu  energyDerivatives.cuh  energyPlot.py  gradient.cu  gradient.cuh  gridOperations.cu  gridOperations.cuh  helper.cuh  interpolator.cu  interpolator.cuh  magnitude.cu  magnitude.cuh  main.cu  marching_cubes.cpp  marching_cubes.h  mat.h  optimizer.cu  optimizer.cuh  quiverPlot.py  quiverPlot2D.py  reduction.cu  reduction.cuh  testFunctions.cu  testInterpolation.cu  tsdf_volume.cpp  tsdf_volume.h  visualization.cu  visualization.cuh
src/scrap/: energyDerivatives.cuh  testInterpolation.cu
timing/: 0.times_pre_optimization.txt  1.times_gradient_optimization.txt  improvement_laplacian.txt
